--- a/aboutme-style.css
+++ b/aboutme-style.css
@@ -12,6 +12,33 @@ h1{
 	color: white;
 	text-align: center;
 }
-a{
-	color: red;
+
+/* unvisited link */
+a:link {
+  color: red;
+   text-decoration: none;
 }
+
+/* visited link */
+a:visited {
+	 color: blue;
+  
+  text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+	text-decoration: underline;
+ color: #00FF00;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+   text-decoration: underline;
+}
+h2::first-letter {
+    font-size: 1.5em;
+    float: left;
+    
+   }
